[package]
name = "ovlib-render-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]
path = "src/render-utils.rs"

[dependencies]
crc32fast = "1.5.0"
cxx.workspace = true
itertools.workspace = true

[build-dependencies]
cxx-build.workspace = true
